--- a/PlanificationEntretien/PlanificationEntretien.csproj
+++ b/PlanificationEntretien/PlanificationEntretien.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <RootNamespace>Planification-Entretien</RootNamespace>
+        <LangVersion>9</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
