--- a/PlanificationEntretien.Tests/PlanificationEntretien.Tests.csproj
+++ b/PlanificationEntretien.Tests/PlanificationEntretien.Tests.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+        <PackageReference Include="Moq" Version="4.16.1" />
         <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.35" />
         <PackageReference Include="SpecFlow.xUnit" Version="3.9.22" />
         <PackageReference Include="xunit" Version="2.4.1" />
