create candidat and recruteur, fix sln and refacto

--- a/PlanificationEntretien.Tests/PlanificationEntretien.Tests.csproj
+++ b/PlanificationEntretien.Tests/PlanificationEntretien.Tests.csproj
@@ -25,4 +25,13 @@
       <Folder Include="obj\Debug\netcoreapp3.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Update="Features\creation-recruteur.feature.cs">
+        <DependentUpon>creation-recruteur.feature</DependentUpon>
+        <AutoGen>true</AutoGen>
+        <DesignTime>true</DesignTime>
+        <Visible>true</Visible>
+      </Compile>
+    </ItemGroup>
+
 </Project>
