refacto with controller for Candidat et Recruteur

--- a/PlanificationEntretien.Tests/PlanificationEntretien.Tests.csproj
+++ b/PlanificationEntretien.Tests/PlanificationEntretien.Tests.csproj
@@ -1,11 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <RootNamespace>PlanificationEntretien</RootNamespace>
+        <LangVersion>10</LangVersion>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoFixture" Version="4.17.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.10" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
         <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.35" />
         <PackageReference Include="SpecFlow.xUnit" Version="3.9.22" />
