--- a/PlanificationEntretien/PlanificationEntretien.csproj
+++ b/PlanificationEntretien/PlanificationEntretien.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Folder Include="infrastructure" />
       <Folder Include="obj\Debug\netcoreapp3.1" />
     </ItemGroup>
 
