separate repository and dao in recruteur

--- a/PlanificationEntretien/PlanificationEntretien.csproj
+++ b/PlanificationEntretien/PlanificationEntretien.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <Folder Include="obj\Debug\netcoreapp3.1" />
+      <Folder Include="recruteur\query\infrastructure" />
     </ItemGroup>
 
     <ItemGroup>
