--- a/PlanificationEntretien/PlanificationEntretien.csproj
+++ b/PlanificationEntretien/PlanificationEntretien.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <Folder Include="candidat\command\infrastructure" />
+      <Folder Include="common\domain" />
       <Folder Include="entretien\command\infrastructure" />
       <Folder Include="obj\Debug\netcoreapp3.1" />
     </ItemGroup>
